--- a/GUIADMIN/Views/Mantenedor/Producto.cshtml
+++ b/GUIADMIN/Views/Mantenedor/Producto.cshtml
@@ -4,5 +4,441 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Producto</h2>
+<ol class="breadcrumb mb-4 mt-4">
+    <li class="breadcrumb-item"><a href="#">Mantenimiento</a></li>
+    <li class="breadcrumb-item active">Productos</li>
+</ol>
+
+<div class="card">
+    <div class="card-header">
+        <i class="fas fa-users"></i> Lista de Productos
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-12">
+                <button type="button" class="btn btn-success" onclick="openModal()">Crear Nuevo</button>
+            </div>
+        </div>
+        <h5 class="card-title"></h5>
+        <p class="card-text"></p>
+
+        <hr />
+
+        <table id="tblProducts" class="display cell-border" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Descripcion</th>
+                    <th>Marca</th>
+                    <th>Categoria</th>
+                    <th>Precio</th>
+                    <th>Stock</th>
+                    <th>Activo</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Start modal data-bs-backdrop="static" evita que se cierre al hacer click en otro lugar fuera del modal-->
+
+    <div class="modal fade" id="AddProductModal" tabindex="-1" aria-labelledby="addProductModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header bg-dark text-white">
+                    <h5 class="modal-title">Producto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input id="txtId" type="text" value="0" />
+
+                    <form id="contenedor" class="row">
+                        <div class="col-sm-3">
+                            <div class="mb-2">
+                                <img id="img_producto" height="197" width="200" class="border rounded mx-auto d-block img-fluid" />
+                            </div>
+                            <div class="mb-2">
+                                <input type="file" class="form-control" id="fileProduct" accept="image/png, image/jpg,image/jpeg" onchange="mostrarImagen(this)" />
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3">
+                            <div class="mb-3">
+                                <label class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="txtNombre" placeholder="Escriba el nombre" name="nombre" autocomplete="off"/>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Descripciòn</label>
+                                <textarea class="form-control" id="txtDescripcion" placeholder="Escriba el nombre" style="height:125px; resize:none" name="descripcion"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3">
+                            <div class="mb-3">
+                                <label class="form-label">Marca</label>
+                                <select id="cboMarca" class="form-select">
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Categoria</label>
+                                <select id="cboCategoria" class="form-select">
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Precio</label>
+                                <input type="text" class="form-control" id="txtPrecio" placeholder="Escriba el precio" name="precio" autocomplete="off">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-3">
+                            <div class="mb-3">
+                                <label class="form-label">Stock</label>
+                                <input type="number" class="form-control" id="txtStock" name="stock">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Activo</label>
+                                <select id="cboActivo" class="form-select">
+                                    <option value="1">Si</option>
+                                    <option value="0">No</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                   
+                    <div class="row mt-2">
+                        <div class="col-12">
+                            <div id="mensajeError" class="alert alert-danger" role="alert">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" onclick="Guardar()">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End modal -->
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.6.8/dist/sweetalert2.min.js"></script>
+
+@section scripts {
+    <script>
+        var tblData;
+        var selectedRow;
+
+        function mostrarImagen(input) {
+            if (input.files) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#img_producto').attr('src', e.target.result).width(200).height(197);
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        @*jQuery.ajax({  Mostrar en consola la data cargada
+            url: '@Url.Action("ListarUsuarios", "Home")',
+            type: "GET",
+            dataType: "json",
+            contentType: "aplication/json; charset= utf-8",
+            success: function (data) {
+                /*debugger;*/
+                console.log(data);
+            }
+        ;*@
+
+        tblData = $("#tblProducts").DataTable({
+            responsive: true,
+            ordering: false,
+            "ajax": {
+                url: '@Url.Action("ListarProductos", "Mantenedor")',
+                type: "GET",
+                dataType: "json"
+            },
+            columns: [
+                { "data": "Nombre" },
+                { "data": "Descripcion" },
+                {
+                    "data": "oMarca", "render": function (data) {
+                        return data.Descripcion
+                    }
+                },
+                {
+                    "data": "oCategoria", "render": function (data) {
+                        return data.Descripcion
+                     }
+                },
+                { "data": "Precio" },
+                { "data": "Stock" },
+                {
+                    "data": "Activo", "render": function (valor) {
+                        if (valor) {
+                            return '<span class="badge bg-success">Si</span>'
+                        } else {
+                            return '<span class="badge bg-danger">No</span>'
+                        }
+                    }
+                },                
+                {
+                    "defaultContent": '<button type="button" class="btn btn-primary btn-sm btn-editar"><i class="fas fa-pen"></i></button>' +
+                                      '<button type="button" class="btn btn-danger btn-sm ms-2 btn-eliminar"><i class="fas fa-trash"></i></button>',
+                    "orderable": false,
+                    "searchable": false,
+                    "width": "90px"
+                }
+            ],
+            "language": {
+                "url": "https://cdn.datatables.net/plug-ins/2.2.2/i18n/es-ES.json"
+            }
+        });
+
+        //Cargamos el SELECT DE MARCA
+        jQuery.ajax({
+            url: '@Url.Action("ListarMarcas", "Mantenedor")',
+            type: "GET",
+            data: null,
+            dataType: "json",
+            contentType: "application/json; charset=utf-8",
+            success: function (data) {
+                console.log(data);
+                $("<option>").attr({ "value": "0", "disabled": "true" }).text("Seleccionar").appendTo("#cboMarca");
+                $.each(data.data, function (index, valor) {
+                    $("<option>").attr({ "value": valor.IdMarca }).text(valor.Descripcion).appendTo("#cboMarca");
+                });
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+
+        //Cargamos el SELECT DE CATEGORIA
+        jQuery.ajax({
+            url: '@Url.Action("ListarCategorias", "Mantenedor")',
+            type: "GET",
+            data: null,
+            dataType: "json",
+            contentType: "application/json; charset=utf-8",
+            success: function (data) {
+                console.log(data);
+                $("<option>").attr({ "value": "0", "disabled": "true" }).text("Seleccionar").appendTo("#cboCategoria");
+                $.each(data.data, function (index, valor) {
+                    $("<option>").attr({ "value": valor.IdCategoria }).text(valor.Descripcion).appendTo("#cboCategoria");
+                });
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+
+        //Validar los campos
+        jQuery.validator.addMethod("precioDecimal", function (value, element) {
+            return this.optional(element) || /^\d{0,4}(\.\d{0,2})?$/i.test(value);
+        }, "El formato correcto del precio es ##.##");
+
+        $("#contenedor").validate({
+            rules: {
+                nombre: {
+                    required: true,
+                    minlength: 3
+                },
+                descripcion: {
+                    required: true,
+                    minlength: 3
+                },
+                cboMarca: {
+                    required: true
+                },
+                cboCategoria: {
+                    required: true
+                },
+                precio: {
+                    required: true,
+                    precioDecimal: true
+                },
+                stock: {
+                    required: true,
+                    number: true
+                }
+            },
+            messages: {
+                nombre: "- El Nombre es obligatorio",
+                descripcion: "- La descripcion es obligatoria",
+                precio: { required: "- El precio es obligatorio", precioDecimal: "El formato correcto del precio es ##.##" },
+                stock: { required: "- El stock es obligatorio", precioDecimal: "debe ingresar solo numeros" },
+            },
+            errorElement: "div",
+            errorLabelContainer: ".alert-danger"
+        });
+
+        function openModal(json) {
+
+            $("#txtId").val(0);
+            $("#txtNombre").val("");
+            $("#img_product").removeAttr("src");
+            $("#fileProducto").val("");
+            $("#txtDescripcion").val("");
+            $("#cboMarca").val($("#cboMarca option:first").val());
+            $("#cboCategoria").val($("#cboCategoria option:first").val());
+            $("#txtPrecio").val("");
+            $("#txtStock").val("");
+            $("#cboActivo").val( 1 );
+            $("#mensajeError").hide();
+
+            if (json != null) {
+                $("#txtId").val(json.IdProducto);
+                $("#txtNombre").val(json.Nombre);
+                $("#txtDescripcion").val(json.Descripcion);
+                $("#cboMarca").val(json.oMarca.IdMarca);
+                $("#cboCategoria").val(json.oCategoria.IdCategoria);
+                $("#txtPrecio").val(json.Precio);
+                $("#txtStock").val(json.Stock);
+                $("#cboActivo").val(json.cboActivo == true? 1 : 0 );
+            }
+
+            $('#AddProductModal').modal('show');
+        }
+
+        //function openModal()  tambein funciona
+        //    var modal = new bootstrap.Modal(document.getElementById('AddUserModal'));
+        //    modal.show();
+        //}
+
+        $("#tblProducts tbody").on("click", '.btn-editar', function () {
+            selectedRow = $(this).closest("tr");
+            var data = tblData.row(selectedRow).data();
+
+            openModal(data);
+        });
+
+        $("#tblProducts tbody").on("click", '.btn-eliminar', function () {
+            selectedProduct = $(this).closest("tr");
+            var data = tblData.row(selectedProduct).data();
+            console.log(data);
+
+        Swal.fire({
+            title: "ELIMINAR",
+            text: "¿Está seguro de eliminar?",
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#3085d6",
+            cancelButtonColor: "#d33",
+            confirmButtonText: "Sí, eliminar!",
+            focusConfirm: false
+        }).then((result) => {
+            if (result.isConfirmed) {
+                jQuery.ajax({
+                    url: '@Url.Action("EliminarProducto", "Mantenedor")',
+                    type: "POST",
+                    data: JSON.stringify({ id: data.IdProducto }),
+                    dataType: "json",
+                    contentType: "application/json; charset=utf-8",
+                    success: function (data) {
+                        if (data.resultado) {
+                            tblData.row(selectedProduct).remove().draw();
+                        } else {
+                            Swal.fire("No se pudo eliminar", data.mensaje, "error");
+                        }
+                    },
+                    error: function (error) {
+                        console.log(error);
+                    }
+                });
+            }
+        });
+            $("#sidebar").attr("aria-hidden", "true");
+    });
+
+
+        function Guardar() {
+
+            if (!$("#contenedor").valid()) {
+                return;
+            }
+
+            var selectedImage = $("#fileProduct")[0].files[0];
+
+            var product = {
+            IdProducto: $('#txId').val(),
+            Nombre: $("#txtNombre").val(),
+            Descripcion: $("#txtDescripcion").val(),
+            oMarca: {
+                IdMarca: $("#cboMarca option:selected").val(),
+                Descripcion: $("#cboMarca option:selected").text()
+            },
+            oCategoria: {
+                IdCategoria: $("#cboCategoria option:selected").val(),
+                Descripcion: $("#cboCategoria option:selected").text()
+            },
+            PrecioTexto: $("#txtPrecio").val(),
+            Precio: $("#txtPrecio").val(),
+            Stock: $("#txtStock").val(),
+            Activo: $('#cboActivo').val() == 1 ? true : false
+            }
+
+            var request = new FormData();
+            request.append("objeto", JSON.stringify(product));
+            request.append("archivoImagen", selectedImage);
+
+            jQuery.ajax({ 
+                    url: '@Url.Action("GuardarProducto", "Mantenedor")',
+                    type: "POST",
+                    data: request,
+                    processData: false,
+                    contentType: false,
+                    success: function (data) {
+
+                       $(".modal-body").LoadingOverlay("hide") //Ocultamos el overlay
+                      // https://gasparesganga.com/labs/jquery-loading-overlay/
+                        //debugger;
+                        //Producto Nuevo
+                       if (product.IdProducto == 0) {
+                           if (data.idGenerado != 0) {
+                               product.IdProducto = data.idGenerado;
+                               tblData.row.add(product).draw(false);
+                               $('#AddProductModal').modal('hide');
+                            } else {
+                               //alert(data.mensaje);
+                               $("#mensajeError").text(data.mensaje);
+                               $("#mensajeError").show();
+                            }
+
+                       } else {
+                           //EDITAR PRODUCTO
+                           if (data.operacionExitosa) {
+                               tblData.row(selectedRow).data(product).draw(false);
+                               selectedRow = null;
+                               $('#AddProductModal').modal('hide');
+                           } else {
+                               //alert(data.mensaje);
+                               $("#mensajeError").text(data.mensaje);
+                               $("#mensajeError").show();
+                           }
+                           tblData.row(selectedRow).data(product).draw(false);
+                        }
+                    },
+                    error: function (error) {
+                        // console.log(error);
+                        $(".modal-body").LoadingOverlay("hide") //Ocultamos el overlay
+                        $("#mensajeError").text("Error Ajax");
+                        $("#mensajeError").show();
+                    },
+                    beforeSend: function () {
+                        $(".modal-body").LoadingOverlay("show", {
+                            imageResizeFactor: 2,
+                            text: "Guardando...",
+                            size: 14
+                        });
+                    }
+                })
+
+                $('#AddProductModal').modal('hide');
+            }
+
+    </script>
+}
 
